--- a/fonts/font.css
+++ b/fonts/font.css
@@ -3,6 +3,7 @@
   src: url(Raleway-ExtraBold.woff2) format("woff2"),
     url(Raleway-ExtraBold.woff) format("woff");
   font-weight: 800;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,4 +11,5 @@
   src: url(Raleway-Regular.woff2) format("woff2"),
     url(Raleway-Regular.woff) format("woff");
   font-weight: 400;
+  font-display: swap;
 }
