--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@ body::before {
   content: "";
   position: absolute;
   inset: 0;
-  z-index: -1;
   background: rgba(255, 255, 255, 0.3);
+  z-index: -1;
 }
 
 .video {
@@ -17,22 +17,19 @@ body::before {
 }
 
 .title {
-  padding-top: 60px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   max-width: 740px;
-  min-height: 410px;
+  text-align: center;
   margin: 0 auto;
   color: #000;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: 800;
   font-size: 116px;
-  letter-spacing: 0.04em;
+  letter-spacing: 0px;
   text-transform: uppercase;
   cursor: help;
 }
 
-.title > span:last-child::after {
+.title::after {
   content: "*";
 }
 
@@ -45,16 +42,19 @@ body::before {
   position: absolute;
   top: 180px;
   right: 20px;
+  max-width: 760px;
   border: 2px solid #000;
   border-radius: 20px;
   padding: 45px 35px;
-  box-shadow: 0 16px 0 #000;
+  box-shadow: 0 12px 0 #000;
   color: #000;
   font-weight: 400;
   font-size: 35px;
   line-height: 1;
+  letter-spacing: 0;
   text-align: left;
   background-color: #fff;
   white-space: pre;
-  text-transform: none;
+  text-transform: initial;
+  text-shadow: initial;
 }
