--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body::before {
 }
 
 .title {
+  padding-top: 60px;
   max-width: 740px;
   text-align: center;
   margin: 0 auto;
@@ -24,7 +25,7 @@ body::before {
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: 800;
   font-size: 116px;
-  letter-spacing: 0px;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
   cursor: help;
 }
@@ -42,11 +43,11 @@ body::before {
   position: absolute;
   top: 180px;
   right: 20px;
-  max-width: 760px;
+  max-width: 742px;
   border: 2px solid #000;
   border-radius: 20px;
   padding: 45px 35px;
-  box-shadow: 0 12px 0 #000;
+  box-shadow: 0 16px 0 #000;
   color: #000;
   font-weight: 400;
   font-size: 35px;
@@ -57,4 +58,5 @@ body::before {
   white-space: pre;
   text-transform: initial;
   text-shadow: initial;
+  letter-spacing: 0.01em;
 }
